- LaTeX-Fehler beseitigt, Formel umgeschrieben und overfull hbox entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@743 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -2510,7 +2510,7 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
     \end{gather*}
     ist harmonisch auf $K$ für alle $y\in K$. Überprüfen, ob
     Randbedingung erfüllt: Wenn $\abs{x}=1$ und $y=0$, dann ist $G(x,y) =
-    G(x,0) = \Gamma(1)-\Gamma(1) = 0$. Für $\abs{x}=1$ und 0<\abs{y}<1$ $\Rightarrow$
+    G(x,0) = \Gamma(1)-\Gamma(1) = 0$. Für $\abs{x}=1$ und $0<\abs{y}<1$ $\Rightarrow$
     $(\abs{y}\abs{x-\overline{y}})^{2} = \abs{y}^{2}(x-\overline{y})
     (x-\overline{y}) = \abs{y}^{2}(\abs{x}^{2} - 2x\overline{y} +
     \abs{\overline{y}}^{2}) =\abs{y}^{2} ( \underbrace{\abs{x^{2}}}_{=1} -
@@ -2531,22 +2531,27 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
   \end{gather*}
 
   \begin{proof}
-    $G$ Green'sche Funktion für $K$ $\Rightarrow$ Es gilt \autoref{eq:18}
+    Sei $G$ Green'sche Funktion für $K\Rightarrow$ es gilt \autoref{eq:18}
 
     Es gilt auf $\partial K$: $\frac{\partial G}{\partial\vec{n}(x)}(x,y)
-    = \sprod{\nabla_{x} G(x,y)}{x}$, $\vec{n}(x) = x$, $\nabla_{x} G(x,y)
-    = \nabla_{x}(\Gamma(\abs{x-y}) -
-    \nabla_{x}(\Gamma(\abs{y}\abs{x-\overline{y}})) =
-    \nabla_{x}(\Gamma(\abs{x-y})) - \abs{y}^{-(n-2)}
-    \nabla_{x}(\Gamma(\abs{x-\overline{y}})) =^{\text{Beweis von
-    \autoref{lem:913-2}}
+    = \sprod{\nabla_{x} G(x,y)}{x}$, $\vec{n}(x) = x$:
+    \begin{align*}
+    \nabla_{x} G(x,y) &= \nabla_{x}(\Gamma(\abs{x-y}) -
+	 \nabla_{x}(\Gamma(\abs{y}\abs{x-\overline{y}}))\\
+      &= \nabla_{x}(\Gamma(\abs{x-y})) - \abs{y}^{-(n-2)}
+    \nabla_{x}(\Gamma(\abs{x-\overline{y}}))\\
+      &=^{\text{Beweis von \autoref{lem:913-2}}}
     \frac{1}{\abs{\omega_{n}}}\Big(\frac{x-y}{\abs{x-y}^{n}} -
-    \abs{y}^{-n+2} \frac{x-\overline{y}}{\abs{x-\overline{y}}^{n}}\Big) =
-    \frac{1}{\abs{\omega_{n}}}\Big(\frac{x-y}{\abs{x-y}^{n}} -
+    \abs{y}^{-n+2}
+	 \frac{x-\overline{y}}{\abs{x-\overline{y}}^{n}}\Big)\\
+      &= \frac{1}{\abs{\omega_{n}}}\Big(\frac{x-y}{\abs{x-y}^{n}} -
     \frac{(x-\overline{y})\abs{y}^{2}}{(\abs{y}\abs{x-\overline{y}})^{n}}
-    \Big) = \frac{1}{\abs{\omega_{n}}} \frac{1}{\abs{x-y}^{n}}(x-y
+    \Big)\\
+      &= \frac{1}{\abs{\omega_{n}}} \frac{1}{\abs{x-y}^{n}}(x-y
     -x\abs{y}^{2} + y) =
-    \frac{x(1-\abs{y}^{2})}{\abs{\omega_{n}}\abs{x-y}^{n}}$
+    \frac{x(1-\abs{y}^{2})}{\abs{\omega_{n}}\abs{x-y}^{n}}
+    \end{align*}
+    
 
     Für den Rand der Kugel ($\abs{x}=1$) ist
     \begin{gather*}
@@ -2556,10 +2561,11 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
   \end{proof}
 \end{lemma}
 
-\begin{satz}[Poisson'sche Darstellungsformel, Lösung des
-  Dirichlet-Problems für Einheitskugel im $\R^{n}$]
+\begin{satz}[Poisson'sche Darstellungsformel]
   \index{Dirichlet-Problem}
-
+  Dies ist auch die Lösung des
+  Dirichlet-Problems für die Einheitskugel im $\R^{n}$.
+  
   Es sei $\phi\colon\partial K\rightarrow\C$ stetig und es sei
   \begin{gather*}
     u(y) = \frac{1-\abs{y}^{2}}{\abs{\omega_{n}}} \int_{\partial K}
