• hecker-parallel/skript.latex   · Xindy ornet Dinge wie $abc$, \text{bla} und \mathrm{XY} besser ein als     makeindex. Daher auf Xindy umgestellt.
• hecker-parallel/indexstyle.xdy
  · Die Zusatzdatei für Xindy.


git-svn-id: https://svn.lug-jena.de/uni-skripte@755 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -10,6 +10,9 @@
 % rubber: clean $base.thm
 %  rubber soll nach Änderungen an der Datei nochmal bauen
 % rubber: watch $base.thm
+% rubber: makeidx.tool      xindy
+% rubber: makeidx.language  german-din
+% rubber: makeidx.modules   indexstyle.xdy
 
 \documentclass[draft,halfparskip*,german,twoside]{scrreprt}
 
