• alt-linopt/skript.latex   · Die Option orthodox bei nag hinzugefügt.
  · Aus der Umgebung itshape einen geklammerten Befehl gemacht.


git-svn-id: https://svn.lug-jena.de/uni-skripte@765 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -8,7 +8,7 @@
 
 \documentclass[german]{scrreprt}
 
-\usepackage[l2tabu]{nag}  % nag überprüft den Text auf veraltete Befehle
+\usepackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete Befehle
                           % oder solche, die man nicht in LaTeX verwenden
                           % soll -- l2tabu-Checker in LaTeX
 \usepackage{ngerman}
@@ -129,9 +129,7 @@
 \clearpage
 \chapter*{Vorwort}
 
-% entspricht Vorlage: 537
-
-\begin{itshape}
+{\itshape
   Dieses Dokument wurde als Skript für die auf der
   Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
   Projekts
@@ -167,7 +165,7 @@
    \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel
     \texttt{<jens@kubieziel.de>}} (2006)
   \end{itemize}
-\end{itshape}
+}
 
 \clearpage
 \pdfbookmark[0]{Inhaltsverzeichnis}{inhaltsverzeichnis}
