--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -22,7 +22,7 @@
 \usepackage{nicefrac}
 \usepackage{svn}         % Zum Auswerten und ordentlichen Darstellen der
                          % SVN-Schlüsselwörter (s. vor \begin{document})
-\usepackage{url}
+\usepackage[draft=false,colorlinks,urlcolor=blue,breaklinks]{hyperref}
 
 \newcommand*{\N}{\mathbb{N}}
 \newcommand*{\Z}{\mathbb{Z}}
@@ -35,7 +35,7 @@
 
 \theoremstyle{plain}
 %\newtheorem{satz}{Satz}[section]
-\newtheorem*{satz*}{Satz o.\,B.}
+% \newtheorem*{satz*}{Satz o.\,B.}
 \newtheorem{lemma}{Lemma}
 \newtheorem{theorem}{Satz}[section]
 
@@ -47,6 +47,13 @@
 \theoremstyle{remark}
 \newtheorem*{remark}{Bemerkung}
 \newtheorem*{beispiel}{Beispiel}
+
+% Hier die Definition, wie \autoref die Umgebungen nennen soll, die mit
+% \newtheorem definiert wurden
+\newcommand*{\lemmaautorefname}{Lemma}
+\renewcommand*{\theoremautorefname}{Satz}
+\newcommand*{\definitionautorefname}{Definition}
+\newcommand*{\Folgautorefname}{Folgerung}
 
 \makeindex
 
@@ -952,7 +959,7 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
 \item Übung
 \item zu zeigen: $\forall \varepsilon >0 \ \exists n_{\varepsilon}
   \in \N\forall n \geq n_{\varepsilon}\colon a_nb_n-ab=a_n(b_n-b)+(a_n-a)b$\\
-  Nach Satz \ref{satz:beschraenkt} folgt, dass $(a_n)$ beschränkt ist,
+  Nach \autoref{satz:beschraenkt} folgt, dass $(a_n)$ beschränkt ist,
   d.\,h. $\exists M \geq 0 \, \forall n \in \N\colon |a_n| \leq M$. Sei
   $\varepsilon > 0$. Dann existiert $n_0,n_1 \in \N$, so dass $|a-a_n|
   \leq \frac{\varepsilon}{2(|b|+1)}$ für $n \geq n_1$ und $|b-b_n|
@@ -1026,7 +1033,7 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
       0 &<|q|^n = \frac{1}{(1+h)^n} \leq \frac{1}{1+nh} \leq
       \frac{1}{nh}
     \end{align*}
-    Nach Satz~\ref{satz:rechenregel} Punkt~6 folgt damit, $\lim |q|^n=0
+    Nach \autoref{satz:rechenregel} Punkt~6 folgt damit, $\lim |q|^n=0
     \Rightarrow \lim q^n=0$.
   \item $q=1 \Rightarrow q^n =1 \Rightarrow \lim q^n=1$
   \item $q=-1$\\
@@ -1043,7 +1050,7 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
     für $n \geq n_0$ \lightning
   \item $|q|>1$\\
     Annahme: $q^n$ ist konvergent. Dann ist nach
-    Satz~\ref{satz:beschraenkt} $q^n$ beschränkt, d.\,h. $\exists M >
+    \autoref{satz:beschraenkt} $q^n$ beschränkt, d.\,h. $\exists M >
     0 \, \forall n \in \N \colon |q^n| \leq M \Rightarrow M \geq |q^n|=|q|^n
     =\underbrace{(1+|q|-1)^n}_{>0} \geq 1+n(|q|-1) \geq n(|q|-1)$\\
     $\Rightarrow n \leq \frac{M}{|q|-1} \Rightarrow \N$ ist beschränkt
@@ -1269,10 +1276,10 @@ Jede beschränkte Folge $(a_n)\subset \R$ besitzt einen
 Häufungspunkt\index{Häufungspunkt}.
 \end{theorem}
 \begin{proof}
-  Aus dem Lemma \ref{lemma:bw} folgt: Es existiert eine Teilfolge
+  Aus dem \autoref{lemma:bw} folgt: Es existiert eine Teilfolge
   $(a_{n_k})\subset (a_n)$. $(a_{n_k})$ ist monoton und
-  beschränkt. Daraus folgt nach Satz \ref{satz:monotoneFolge}: $\lim
-  a_{n_k}=a \in \R$ und Satz \ref{satz:hp} legt den Schluss nahe, dass
+  beschränkt. Daraus folgt nach \autoref{satz:monotoneFolge}: $\lim
+  a_{n_k}=a \in \R$ und \autoref{satz:hp} legt den Schluss nahe, dass
   $a$ Häufungspunkt ist.
 \end{proof}
 
@@ -1301,19 +1308,19 @@ Sei $(a_n) \subset \R$ beschränkt. Dann ist $\overline{\lim}\ a_n$ grösster Häuf
 $\underline{\lim}\ a_n$ kleinster Häufungspunkt von $(a_n)$.
 \end{theorem}
 
-\textbf{Beweis} Nach dem Satz \ref{satz:bw} (Satz von Bolzano/Weierstrass) besitzt $(a_n)$ einen Häufungspunkt.
+\textbf{Beweis} Nach dem \autoref{satz:bw} (Satz von Bolzano/Weierstrass) besitzt $(a_n)$ einen Häufungspunkt.
 \[\inf \{a_n\}\leq \overline{\lim} \ a_n \leq \sup \{a_n\}\]
 \begin{enumerate}[1. Schr{i}tt]
   \item Zu zeigen: $a=\overline{\lim}\ a_n$ ist Häufungspunkt von $(a_n)$\\
-    Setzen $b_n:=\sup \{a_k\colon k\geq n\}$ ist monoton fallend und nach unten beschränkt. Daraus folgt nach Satz 
-    \ref{satz:monotoneFolge}: $a=\lim b_n=\inf \{b_n\}=\overline{\lim}\ a_n$\\
+    Setzen $b_n:=\sup \{a_k\colon k\geq n\}$ ist monoton fallend und nach unten beschränkt. Daraus folgt nach
+    \autoref{satz:monotoneFolge}: $a=\lim b_n=\inf \{b_n\}=\overline{\lim}\ a_n$\\
     Für $k \in \N \ \exists m_k \in \N \colon a\leq b_{m_k}<a+\frac{1}{k}\Rightarrow \exists n_k\geq m_k\colon b_{m_k}-\frac{1}{k}
     <a_{n_k}\leq b_{m_k}$\\
     $\Rightarrow a-\frac{1}{k}\leq b_{m_k}-\frac{1}{k}<a_{n_k}<a+\frac{1}{k}$\\
     $\Rightarrow a-\frac{1}{k}<a_{n_k}<a+\frac{1}{k}$\\
-    $\Rightarrow \lim_{k\rightarrow \infty} a_{n_k}=a\stackrel{\text{Satz \ref{satz:hp}}}{\Longrightarrow} a$ ist Häufungspunkt 
+    $\Rightarrow \lim_{k\rightarrow \infty} a_{n_k}=a\stackrel{\text{\autoref{satz:hp}}}{\Longrightarrow} a$ ist Häufungspunkt 
     von $(a_n)$
-  \item $a$ ist grösster Häufungspunkt von $(a_n)$. Sei $a'$ Häufungspunkt von $(a_n)\stackrel{\text{Satz \ref{satz:hp}}}
+  \item $a$ ist grösster Häufungspunkt von $(a_n)$. Sei $a'$ Häufungspunkt von $(a_n)\stackrel{\text{\autoref{satz:hp}}}
     {\Longrightarrow} \exists \text{Teilfolge } (a_{n_k})\colon\lim a_{n_k}=a'$\\
     $b_{n_k}=\sup \{a_l\colon l\geq n_k\} \geq a_{n_k}\Rightarrow a=\lim b_{n_k}\geq \lim a_{n_k}=a'$
 \end{enumerate}
@@ -1346,7 +1353,7 @@ ist genau dann konvergent, wenn sie eine Cauchyfolge ist.
 \end{theorem}
 \textbf{Beweis}
 \begin{itemize}
-  \item["`$\Rightarrow$"'] siehe Satz \ref{satz:cf}
+  \item["`$\Rightarrow$"'] siehe \autoref{satz:cf}
   \item["`$\Leftarrow$"'] Sei $(a_n)\subset \R$ eine
     Cauchyfolge. $(a_n)$ ist beschränkt für $\varepsilon=1$
     \begin{align*}
@@ -1355,8 +1362,8 @@ ist genau dann konvergent, wenn sie eine Cauchyfolge ist.
       & \text{ für } n,m\geq n_1
     \end{align*}
     Für $M=\max\{|a_1|,|a_2|,\ldots, |a_m|, 1+|a_m|\}$ gilt $|a_n|\leq
-    M\, \forall n \in \N$. Nach dem Satz von Bolzano/Weierstrass (Satz
-    \ref{satz:bw}) gilt: $\exists$ Teilfolge $(a_{n_k})\subset
+    M\, \forall n \in \N$. Nach dem Satz von Bolzano/Weierstrass
+    (\autoref{satz:bw}) gilt: $\exists$ Teilfolge $(a_{n_k})\subset
     (a_n)\colon a_{n_k}$ ist konvergent mit $a:=\lim_{k\rightarrow \infty}
     a_{n_k}$.\\
     Sei $\varepsilon>0$. Dann existiert $k_{\varepsilon}, n_{\varepsilon} \in \N \colon|a_{n_k}-a|\leq \frac{\varepsilon}{2}$
@@ -1380,19 +1387,19 @@ In $\R$ sind folgende Aussagen äquivalent:
 \begin{enumerate}[(1)]
   \item \textbf{Vollständigkeitsaxiom\index{Vollständigkeitsaxiom}}: Jede nichtleere nach oben beschränkte Menge besitzt
     ein Supremum\index{Supremum}.
-  \item \textbf{Satz über monotone Folgen\index{monotone Folgen!Satz über}}: Nach Satz \ref{satz:monotoneFolge} Jede 
+  \item \textbf{Satz über monotone Folgen\index{monotone Folgen!Satz über}}: Nach \autoref{satz:monotoneFolge} Jede 
     nach oben beschränkte mo\-no\-ton wachsende Folge besitzt einen Grenzwert.
   \item \textbf{Satz von Bolzano/Weierstrass\index{Bolzano/Weierstrass!Satz von}}: Jede beschränkte Folge hat eine 
     konvergente Teil\-fol\-ge.
   \item Jede Cauchyfolge hat einen Grenzwert.
-  \item Intervallschachtelungsprinzip (Satz \ref{satz:Ischachtelung})
+  \item Intervallschachtelungsprinzip (\autoref{satz:Ischachtelung})
 \end{enumerate}
 \end{theorem}
 \textbf{Beweis}
 \begin{itemize}
-  \item[(1)$\Rightarrow$(2)] $\lim (a_n)=\sup \{a_n\}$ nach Satz \ref{satz:monotoneFolge}
-  \item[(2)$\Rightarrow$(3)] siehe Beweis zu Satz \ref{satz:bw}
-  \item[(3)$\Rightarrow$(4)] siehe Beweis zu Satz \ref{satz:CKonv}
+  \item[(1)$\Rightarrow$(2)] $\lim (a_n)=\sup \{a_n\}$ nach \autoref{satz:monotoneFolge}
+  \item[(2)$\Rightarrow$(3)] siehe Beweis zu \autoref{satz:bw}
+  \item[(3)$\Rightarrow$(4)] siehe Beweis zu \autoref{satz:CKonv}
   \item[(4)$\Rightarrow$(5)] zu zeigen: Sei $I_n=[a_n,b_n]$ eine Intervallschachtelung $\Rightarrow \bigcap I_n=\{s\}$\\
     $\forall n,m \in \N$ gilt:$\left.
     \begin{array}{lll}
@@ -1407,7 +1414,7 @@ In $\R$ sind folgende Aussagen äquivalent:
     $\Rightarrow \lim a_n = s \in \R$\\
     Ferner $\lim b_n =\lim ((b_n-a_n)+a_n)=\lim (b_n-a_n)+\lim a_n = 0+s=s$. Ausserdem $\forall n \in \N \colon a_n\leq s\leq 
     b_n \Rightarrow s \in \bigcap_{n=1}^{\infty}I_n$\\
-    Eindeutigkeit von $s$ wie im Beweis von Satz \ref{satz:Ischachtelung}
+    Eindeutigkeit von $s$ wie im Beweis von \autoref{satz:Ischachtelung}
   \item[(5)$\Rightarrow$(1)] zu zeigen: Sei $\emptyset \neq M \subset \R$ nach oben beschränkt. $\Rightarrow \sup M 
     \subset \R$\\
     Sei $b \in \R$ obere Schranke und $a \in M$
@@ -1518,7 +1525,7 @@ $\sum a_n$ ist konvergent, wenn  $\lim a_n=0$ ist.
 \end{proof}
 
 \begin{remark}
-  Die Umkehrung von Satz \ref{satz:konvkrit} gilt im allgemeinen
+  Die Umkehrung von \autoref{satz:konvkrit} gilt im allgemeinen
   nicht. Ein Beispiel ist die harmonische Reihe.
 \end{remark}
 
@@ -1528,8 +1535,9 @@ $\sum a_n$ ist konvergent, wenn  $\lim a_n=0$ ist.
 \[\forall \varepsilon >0 \ \exists n_{\varepsilon}\in \N \ \forall n>m>n_{\varepsilon}\colon\left|\sum_{k=m}^n a_k\right|
 \leq \varepsilon\]
 \end{theorem}
-\textbf{Beweis}: $s_n-s_m=\sum_{k=m+1}^n a_k\quad \sum a_k$ konvergent $\stackrel{\text{Def. \ref{def:reihe}}}{\Leftrightarrow}
-(s_n)$ konvergent $\stackrel{\text{Satz \ref{satz:CKonv}}}{\Leftrightarrow}(s_n)$ ist Cauchyfolge.
+\textbf{Beweis}: $s_n-s_m=\sum_{k=m+1}^n a_k\quad \sum a_k$ konvergent
+$\stackrel{\text{\hyperref[def:reihe]{Def.\,\ref*{def:reihe}}}}{\Leftrightarrow}
+(s_n)$ konvergent $\stackrel{\text{\autoref{satz:CKonv}}}{\Leftrightarrow}(s_n)$ ist Cauchyfolge.
 
 \begin{definition}
 \textbf{Absolute Konvergenz\index{Konvergenz!absolute}} Eine Reihe $\sum a_k$ heißt \emph{absolut konvergent\index{absolut konvergent}}
@@ -1588,7 +1596,7 @@ Reihe
         \lim \sqrt[n_k]{|a_{n_k}|}=\alpha$. Wähle $\varepsilon_0>0\colon\alpha >1+\varepsilon_0$. Dann existiert ein $k_0 \in \N \colon
 	|\sqrt[n_k]{|a_{n_k}|}-\alpha |<\varepsilon_0$ für $k\geq k_0$. Somit ist $-\varepsilon_0<\sqrt[n_k]{|a_{n_k}|}<
 	\varepsilon_0 \Rightarrow 1<\alpha-\varepsilon_0<\sqrt[n_k]{|a_{n_k}|}\Rightarrow 1<|a_{n_k}|$ für $k\geq k_0$
-	Daraus folgt, dass $a_{n_k}$ nicht gegen 0 streben. Daher strebt auch $a_n$ nicht gegen 0. Nach Satz \ref{satz:konvkrit}
+	Daraus folgt, dass $a_{n_k}$ nicht gegen 0 streben. Daher strebt auch $a_n$ nicht gegen 0. Nach \autoref{satz:konvkrit}
 	folgt, dass auch $\sum a_n$ divergiert.
       \item Sei $\alpha =\overline{\lim}\sqrt[n]{|a_n|}<1$. Wähle $\beta \colon\alpha<\beta <1, b_n:=\sup\{\sqrt[k]{|a_k|}\colon k\geq n\}$
         Für $b_n$ gilt $\lim b_n=\alpha$. Wähle $\varepsilon_0\colon\alpha+\varepsilon_0<\beta$. Dann existiert ein $n_0 \in \N \ 
@@ -1662,7 +1670,7 @@ $\Rightarrow
   s_{2n} &\geq & s_1\\
   s_{2n+1}&\leq & s_0
 \end{array}$
-für alle $n=0,1,2,\ldots \Bigg\}\stackrel{\text{Satz \ref{satz:monotoneFolge}}}{\Longrightarrow}
+für alle $n=0,1,2,\ldots \Bigg\}\stackrel{\text{\autoref{satz:monotoneFolge}}}{\Longrightarrow}
 \begin{array}{rcl}
   \lim s_{2n} & = & s\\
   \lim s_{2n+1} & = & s'
@@ -1681,7 +1689,7 @@ Für $N:=\max\{2n_0,2n_1+1\}$ gilt: $|s_n-s|<\varepsilon$ für $n\geq N$, d.\,h. $
 \begin{enumerate}
   \item $\sum_{n=1}^\infty (-1)^{n-1}\frac{1}{n}$ konvergiert. $a_n=\frac{1}{n}, a_1\geq a_2\geq \ldots \geq 
     a_n\geq \ldots \geq0, \lim a_n=0$\\
-    $\stackrel{\text{Satz \ref{satz:LeibKrit}}}{\Longrightarrow} \sum (-1)^{n-1}\frac{1}{n}$ ist konvergent.
+    $\stackrel{\text{\autoref{satz:LeibKrit}}}{\Longrightarrow} \sum (-1)^{n-1}\frac{1}{n}$ ist konvergent.
   \item $\sum_{n=1}^\infty \frac{(n+1)^{n-1}}{(-n)^n}=\sum \frac{1}{(-1)^n}\cdot \frac{(n+1)^{n-1}}{n^n}=\sum (-1)^n
     \frac{(n+1)^{n-1}}{n^n}$\\
     $a_n=\frac{(n+1)^{n-1}}{n^n}=(\frac{n+1}{n})^n\cdot \frac{1}{n+1}=(1+\frac{1}{n})^n\cdot \frac{1}{n+1}\rightarrow e
@@ -1723,11 +1731,11 @@ Ferner gilt: $\sum_{k=1}^\infty a_{\pi(k)}=\sum_{k=1}^\infty a_k \qquad \forall 
       0\leq a_n^-:=\min\{a_n,0\} & = & \frac{|a_n|-a_n}{2}\leq |a_n|
     \end{array}$\\
     $\stackrel{\text{Maj.-krit.}}{\Rightarrow} \sum a_n^+, \sum a_n^-$ konvergent\\
-    $\stackrel{\text{Satz \ref{satz:umordnung}}}{\Rightarrow} \sum_1^\infty \sum_1^\infty a_{\pi(k)}^+=\sum_1^\infty a_k^+,
+    $\stackrel{\text{\autoref{satz:umordnung}}}{\Rightarrow} \sum_1^\infty \sum_1^\infty a_{\pi(k)}^+=\sum_1^\infty a_k^+,
     \sum_1^\infty a_{\pi(k)}^-=\sum_1^\infty a_k^-$\\
     $\Rightarrow \sum_1^\infty a_{\pi(k)}=\sum_1^\infty (a_{\pi(k)}^+-a_{\pi(k)}^-)=\sum_1^\infty a_{\pi(k)}^+-
     \sum_1^\infty a_{\pi(k)}^-=\sum_1^\infty a_k^+-\sum_1^\infty a_k^-=\sum_1^\infty (a_k^+-a_k^-)=\sum_1^\infty a_k$
-  \item["`$\Leftarrow$"'] Sei $\sum |a_n|$ divergent. O.\,B.\,d.\,A. sei $\sum a_n$ konvergent (sonst $\pi=id$)\\
+  \item["`$\Leftarrow$"'] Sei $\sum |a_n|$ divergent. Sei o.\,B.\,d.\,A. $\sum a_n$ konvergent (sonst $\pi=id$)\\
     Feststellung: $a_k=a_k^+-a_k^- \quad |a_k|=a_k^++a_k^-$\\
     $\left.\begin{array}{rcl}
       \sum |a_n| \text{ divergent}\\
@@ -1750,7 +1758,7 @@ Ferner gilt: $\sum_{k=1}^\infty a_{\pi(k)}=\sum_{k=1}^\infty a_k \qquad \forall 
 \end{enumerate}
 \end{definition}
 
-Satz \ref{satz:absUmordnung} besagt, dass unbedingt konvergente Reihen vorhanden sind, wenn diese absolut konvergieren.
+\autoref{satz:absUmordnung} besagt, dass unbedingt konvergente Reihen vorhanden sind, wenn diese absolut konvergieren.
 
 \begin{theorem}
 \textbf{Riemannsche Umordnungssatz\index{Umordnungssatz!Riemannsche}\index{Riemannsche Umordnungssatz}} Sei $\sum_1^\infty
@@ -1784,7 +1792,7 @@ konvergent und es gilt
     $q_0+q_1+\cdots +q_{(n+1)^2-1}=(\sum_{k=0}^n a_k)(\sum_{k=0}^n b_k)\stackrel{n\rightarrow \infty}{\rightarrow}
     (\sum_{k=0}^\infty a_k)(\sum_{k=0}^\infty b_k)$\\
     $\sum_{k=0}^\infty q_k=(\sum_{k=0}^\infty a_k)(\sum_{k=0}^\infty b_k)$\\
-    Da $\sum q_n$ eine Umordnung von $\sum p_n$ ist, folgt nach Satz \ref{satz:absUmordnung} und dem ersten Schritt, dass
+    Da $\sum q_n$ eine Umordnung von $\sum p_n$ ist, folgt nach \autoref{satz:absUmordnung} und dem ersten Schritt, dass
     $\sum p_n=\sum q_n = (\sum a_n)(\sum b_n)$
 \end{enumerate}
 \qed
@@ -1798,9 +1806,9 @@ Die Produktreihe $\sum c_n$ heißt \emph{Cauchyprodukt\index{Cauchyprodukt}} der 
 Seien $\sum a_n, \sum b_n$ absolut konvergent. Dann ist das Cauchyprodukt $\sum c_n$ absolut konvergent und es gilt:
 \[\sum_{n=0}^\infty c_n = \sum_{n=0}^\infty \left(\underbrace{\sum_{k=0}^n a_k b_{n-k}}_{=:d_n}\right) = \left(\sum a_n\right)\left(\sum b_n\right)\]
 \end{theorem}
-\textbf{Beweis}: $\sum c_n=(\sum a_n)(\sum b_n)$ ist nach Satz \ref{satz:abskonvReihe} absolut konvergent. Da $\sum d_n$ eine
-spezielle Klammerung von $\sum c_n$ ist, gilt $\sum_{n=0}^\infty c_n=\sum_{n=0}^\infty d_n$ nach Satz 
-\ref{satz:RechenregelReihe} Punkt 3.\qed
+\textbf{Beweis}: $\sum c_n=(\sum a_n)(\sum b_n)$ ist nach \autoref{satz:abskonvReihe} absolut konvergent. Da $\sum d_n$ eine
+spezielle Klammerung von $\sum c_n$ ist, gilt $\sum_{n=0}^\infty c_n=\sum_{n=0}^\infty d_n$ nach
+\autoref{satz:RechenregelReihe} Punkt 3.\qed
 
 \paragraph{Bemerkungen zum Cauchyprodukt} für $n\in \N\cup \{0\}$ sei $a_n:=b_n:=\frac{(-1)^n}{\sqrt{n+1}}$ und 
 $d_n=\sum_{k=0}^n a_kb_{n-k}$. Die Reihen $\sum a_n, \sum b_n$ konvergieren nach dem Leibnitzkriterium. Ihr 
@@ -1904,7 +1912,7 @@ Rechenregeln:
     sind $f,g\colon D\rightarrow\R$ stetig in $a \in D$, so sind $f+g, f\cdot g, \lambda f (\lambda \in \R)$
     stetig in $a$. Ist $g(a)\neq 0$, so ist auch $\frac{f}{g}\colon D'\rightarrow \R (D'=\{x\in D\colon g(x)\neq 0\})$
     stetig in $a$.\\
-    \textbf{Beweis}: Siehe hierzu Satz \ref{satz:wkonvkrit}. z.\,B. Sei $(x_n)$ eine Folge mit $x_n\rightarrow a
+    \textbf{Beweis}: Siehe hierzu \autoref{satz:wkonvkrit}. z.\,B. Sei $(x_n)$ eine Folge mit $x_n\rightarrow a
     \stackrel{f,g \text{ stetig}}{\Longrightarrow} f(x_n)\rightarrow f(a), g(x_n)\rightarrow g(a)$\\
     $\Rightarrow (f+g)(x_n)=f(x_n)+g(x_n)\rightarrow f(a)+g(a)=(f+g)(a)$\\
     Daraus folgt, dass $f+g$ stetig in $a$ sind.
@@ -1987,7 +1995,7 @@ hat den Häufungspunkt $a$. $a$ selbst hat keinen Häufungspunkt.
   \tilde{d}(f(x),c)<\varepsilon\]
 \end{theorem}
 \begin{proof}
-  Der Beweis wird analog zu Satz \ref{satz:e-d-stetig} geführt.
+  Der Beweis wird analog zu \autoref{satz:e-d-stetig} geführt.
 \end{proof}
 
 \begin{remark}
@@ -2136,7 +2144,7 @@ wenn jede Folge aus $K$ eine konvergente Teilfolge in $K$ enthält.
     $\Rightarrow \lim x_n=\lim x_{n_k}=a\in K$
   \item In $\R$ gilt: $K\subset \R$ ist genau dann kompakt, wenn $K$ beschränkt und abgeschlossen ist.\\
     \textbf{Beweis} $K\subset \R$ abgeschlossen und beschränkt. Dann ist zu zeigen, dass $K$ kompakt ist.\\
-    Sei $(x_n)\subset K \Rightarrow (x_n)$ beschränkt $\stackrel{\text{Satz \ref{satz:bw}}}{\Rightarrow}
+    Sei $(x_n)\subset K \Rightarrow (x_n)$ beschränkt $\stackrel{\text{\autoref{satz:bw}}}{\Rightarrow}
     \exists \text{ TF} (x_{n_k})\subset (x_n)\colon \lim x_{n_k}\in\R\stackrel{\text{abg.}}{\Rightarrow}
     \lim (x_{n_k})\in K$
 \end{enumerate}
@@ -2213,7 +2221,7 @@ Sei $K\subset X$ kompakt und $f\colon K\rightarrow\R$ stetig. Dann gilt:
 $f$ nimmt auf $K$ ihr Maximum an.
 \[\exists q \in K\colon f(q)=\inf_{X\in K}f(x)\]
 $f$ nimmt auf $K$ ihr Minimum an.\\
-\textbf{Beweis}: Für Maximum: Nach Satz \ref{satz:beschr-abg} und \ref{satz:gleichm-stetig} wissen wir: Die Tatsache, dass
+\textbf{Beweis}: Für Maximum: Nach \autoref{satz:beschr-abg} und \autoref{satz:gleichm-stetig} wissen wir: Die Tatsache, dass
 $f$ stetig ist, impliziert, dass $f(K)$ beschränkt ist.
 \begin{align*}
   M:=\sup_{x\in K} f(x)\in\R & \Rightarrow \forall n \in \N \ \exists x_n\in K\colon f(x_n)\leq M\leq f(x_n)+\frac{1}{n}\\
@@ -2223,7 +2231,7 @@ $f$ stetig ist, impliziert, dass $f(K)$ beschränkt ist.
 \qed
 \end{theorem}
 
-Bemerkung: Satz \ref{satz:max-fkt} ist im allgemeinen falsch, falls $K$ nicht kompakt ist. Ein Beispiel hierfür ist
+Bemerkung: \autoref{satz:max-fkt} ist im allgemeinen falsch, falls $K$ nicht kompakt ist. Ein Beispiel hierfür ist
 die Funktion $f(x)=\frac{1}{x}$. Diese hat auf dem Intervall $]0,\infty [$ weder ein Maximum noch ein Minimum.
 
 \subsubsection{Ein Satz über inverse Funktionen}
@@ -2231,7 +2239,7 @@ die Funktion $f(x)=\frac{1}{x}$. Diese hat auf dem Intervall $]0,\infty [$ weder
 \label{satz:invFunkt}
 Sei $X$ ein kompakter metrischer Raum, die Abbildung $f\colon X\rightarrow Y$ stetig und injektiv. Dann gilt:
 \[f^{-1}\colon f(X)\rightarrow X\text{ist stetig}\]
-\textbf{Beweis} $Y_0 :=f(X)$ ist nach Satz \ref{satz:gleichm-stetig} kompakt. Nach Satz \ref{satz:fkt-aquiv} genügt es,
+\textbf{Beweis} $Y_0 :=f(X)$ ist nach \autoref{satz:gleichm-stetig} kompakt. Nach \autoref{satz:fkt-aquiv} genügt es,
 zu zeigen, dass die Urbilder von abgeschlossenen Mengen wieder abgeschlossen sind.\\
 $A\subset X$ abgeschlossen $\Rightarrow (f^{-1})^{-1}(A)=f(A)$ abgeschlossen\\
 Sei $(y_n)\subset f(A), y_0\rightarrow b\in Y=f(X)$. Es ist zu zeigen, dass $b\in f(A)$.\\
@@ -2287,7 +2295,7 @@ $\left.\begin{array}{rcl}
 \textbf{2. Zwischenwertsatz} Sei $f\colon[a,b]\rightarrow\R$ und $c\in \R$ liegt zwischen $f(a)$ und $f(b)$. Dann existiert
 $p\in[a,b]\colon f(p)=c$.\\
 \textbf{Beweis} Sei $f(a)<c<f(b)$. Wir definieren eine Funktion $g\colon[a,b]\rightarrow \R$ durch $g(x):=f(x)-c$. Die
-Funktion $g$ ist stetig mit $g(a)=f(a)-c<0, g(b)=f(b)-c>0$. Dann folgt nach Satz \ref{satz:zws} $\exists p\in[a,b]
+Funktion $g$ ist stetig mit $g(a)=f(a)-c<0, g(b)=f(b)-c>0$. Dann folgt nach \autoref{satz:zws} $\exists p\in[a,b]
 \colon g(p)=f(p)-c=0\Rightarrow f(p)=c$
 \qed
 \end{Folg}
@@ -2323,18 +2331,18 @@ $f\colon[a,b]\rightarrow[A,B]$ ist surjektiv, denn wenn $A<c<B$ dann folgt nach 
 p\in [a,b]\colon f(p)=c$. Daher ist $f$ bijektiv von $[a,b]\rightarrow [A,B]$.\\
 $f^{-1}$ ist streng monoton wachsend. Es ist zu zeigen, dass $y_1,y_2\in [A,B]\colon y_1<y_2\rightarrow f^{-1}<f^{-1}$.\\
 Annahme: $f^{-1}(y_1)\geq f^{-1}(y_2)\rightarrow y_1=f(f^{-1}(y_1))\geq f(f^{-1}(y_2))=y_2$\lightning\\
-$f^{-1}[A,B]\rightarrow [a,b]$ ist stetig. Nach Satz \ref{satz:invFunkt} ist auch $f$ auf der kompakten Menge 
+$f^{-1}[A,B]\rightarrow [a,b]$ ist stetig. Nach \autoref{satz:invFunkt} ist auch $f$ auf der kompakten Menge 
 $[a,b]$ stetig und bijektiv. Daher folgt, dass $^{-1}\colon f([A,B])=[A,B]\rightarrow [a,b]$ stetig.\qed
 \end{theorem}
 
 \subsection{Der Banachsche Fixpunktsatz in vollständigen metrischen Räumen}
 
-Zur Erinnerung sollte sich nochmals Definition \ref{def:vollst} anschauen.\\
+Zur Erinnerung sollte sich nochmals \autoref{def:vollst} anschauen.\\
 \textbf{Bemerkung} Eine abgeschlossene Teilmenge $A$ eines vollständigen metrischen Raumes $X$ ist in der Metrik
 von $X$ ebenfalls ein vollständiger metrischer Raum.\\
 Beweis: Sei $(x_n)\subset A$ eine Cauchyfolge. Dann ist $(x_n)\subset X$ eine Cauchyfolge. Da $X$ vollständig ist,
-existiert ein $a\in X$ für das gilt $\lim x_n=a$. Aufgrund der Tatsache, dass $A$ abgeschlossen ist, gilt nach Satz
-\ref{satz:abgTeilmenge}, dass $a\in A$ liegt. Daher folgt, dass $A$ abgeschlossen ist.
+existiert ein $a\in X$ für das gilt $\lim x_n=a$. Aufgrund der Tatsache, dass $A$ abgeschlossen ist, gilt nach
+\autoref{satz:abgTeilmenge}, dass $a\in A$ liegt. Daher folgt, dass $A$ abgeschlossen ist.
 
 Beispiele: $X=\R, [a,b]$ ist ein vollständiger metrischer Raum.\\
 $[a,\infty[$ ist ein vollständiger metrischer Raum.\\
@@ -2439,7 +2447,7 @@ Eine Funktion $P\colon\R\rightarrow \R$ mit $P(x)=a_0x^k+a_1x^{k-1}+\cdots + a_{
 Eine Funktion $R(x)=\frac{P(x)}{Q(x)}$ mit $P,Q$ Polynomen heißt \emph{rationale Funktion\index{Funktion!rationale}}.
 
 Es gilt: $P\colon\R\rightarrow\R$ stetig, $R\colon D\rightarrow\R, D=\{x\in \R\colon Q(x)\neq0\}$
-\textbf{Beweis}: siehe Satz \ref{satz:e-d-stetig}. Ferner gilt:
+\textbf{Beweis}: siehe \autoref{satz:e-d-stetig}. Ferner gilt:
 \[\lim_{x\rightarrow\infty}P(x)=\begin{cases}\infty, a_0>0, k\geq 1\\-\infty, a_0<0, k\geq 1\end{cases}\]
 \[\lim_{x\rightarrow\infty}P(x)=\begin{cases}\infty, a_0>0, k \text{ gerade}\\-\infty, a_0<0, k \text{ gerade}\\-\infty, a_0>0,
 k \text{ ungerade}\\\infty, a_0<0, k \text{ ungerade}\end{cases}\]
@@ -2502,9 +2510,9 @@ Für $exp\colon\R\rightarrow\R$ gelten folgende Eigenschaften:
     $x_0<x_1 \Rightarrow exp(x_1)=exp(x_1-x_0)\cdot exp(x_0)>exp(x_0)\Rightarrow$ streng monoton wachsend\\
     \textbf{$exp\colon\R\rightarrow ]0,\infty [$ bijektiv}\\
     Die Exponentialfunktion ist bijektiv, da sie streng monoton wachsend ist. Ferner gilt: $0<exp(x)<\infty$ für $x\in\R$
-    (Satz \ref{satz:expEigenschaft})
+    (\autoref{satz:expEigenschaft})
   \item $ln:=(exp)^{-1}; ]0,\infty [$ ist stetig und streng monoton wachsend auf jedem kompakten Intervall $[a,b]\subset ]0,
-    \infty [$ (nach Satz \ref{satz:reellInvFkt})
+    \infty [$ (nach \autoref{satz:reellInvFkt})
     und damit auch auf $]0,\infty [$\\
     $x_0<x_1 \Rightarrow f(x_0)<f(x_1)$\\
     Funktionalgleichung:\\
@@ -2541,8 +2549,8 @@ $f(x)=x\cdot ln(a)\quad g(x)=exp(x)\quad exp_a(x)=g(f(x))$ Die Komposition von s
     $a^p=exp_a(p)=exp_a(q\frac{p}{q})=\left(exp_a(\frac{p}{q})\right)^q\Rightarrow exp_a(\frac{p}{q})=\sqrt[q]{a^p}=a^{\frac{p}{q}}$
 \end{enumerate}
 
-Bemerkung: Satz \ref{satz:expa} rechtfertigt die Bezeichnung $a^x:=exp_a(x)$. Für $a=e$ hat man $e^x=exp_e(x)=exp(x)$, 
-da $ln(e)=1$. Die Funktionalgleichung aus Satz \ref{satz:expa} i) hat jetzt die Form $a^{x+y}=a^x\cdot a^y, x,y\in \R$
+Bemerkung: \autoref{satz:expa} rechtfertigt die Bezeichnung $a^x:=exp_a(x)$. Für $a=e$ hat man $e^x=exp_e(x)=exp(x)$, 
+da $ln(e)=1$. Die Funktionalgleichung aus \autoref{satz:expa} i) hat jetzt die Form $a^{x+y}=a^x\cdot a^y, x,y\in \R$
 
 \begin{theorem}
 Für $a,b>0$ und $x,y\in \R$ gilt:
@@ -2926,7 +2934,7 @@ Bemerkungen:
 	\item Falls $f$ nicht konstant ist, existiert ein $x_0\in
 	  ]a,b[\colon f(x_0)>f(a)$. Dann wird das absolute Maximum/Minimum von
 	  $f\colon[a,b]\rightarrow\R$ in einem Punkt $\xi\in]a,b[$
-	  angenommen. Nach Satz \ref{satz:lokExtremum} gilt $f'(\xi)=0$.
+	  angenommen. Nach \autoref{satz:lokExtremum} gilt $f'(\xi)=0$.
       \end{enumerate}
     \item Mittelwertsatz\index{Mittelwertsatz}: Sei $f\colon[a,b]\rightarrow\R$ stetig und sei $f\colon
       ]a,b[\rightarrow\R$ differenzierbar in $]a,b[$ und $f(a)=f(b)$. Dann
@@ -3024,7 +3032,7 @@ Beispiel: \[\lim_{x\rightarrow 0} \frac{e^x-1}{x}=\lim_{x\rightarrow 0}
   \begin{array}{rcl}
     f'(\xi)<0 & \text{für } x-\xi<\xi<x\\
     f'(\xi)>0 & \text{für } x<\xi<x+\xi
-  \end{array}\right\}$ Nach Satz \ref{satz:monoton} besitzt $f$ in $x$
+  \end{array}\right\}$ Nach \autoref{satz:monoton} besitzt $f$ in $x$
   ein isoliertes lokales Minimum. Die Beweisführung erfolgt analog für
   das Maximum.
   \qed
@@ -3074,7 +3082,7 @@ Eine lineare Funktion $f(x)=ax+b$ ist sowohl konvex als auch konkav.
 	  setzt $\varphi(x):=f(x)-f'(x_0)(x-x_0)$ für $x_0\in D$. Dann
 	  hat man $\varphi\colon D\rightarrow\R$ ist zweimal differenzierbar
 	  mit $\varphi'(x_0)=0$ und $\varphi''(x_0)=f''(x)<0$. Nach
-	  Satz \ref{satz:lokExtrema} hat $\varphi$ in $x_0$ ein
+	  \autoref{satz:lokExtrema} hat $\varphi$ in $x_0$ ein
 	  isoliertes lokales Maximum. Somit existiert ein $h>0\colon
 	  [x_0-h,x_0+h]\subset D$ und $\varphi(x_0-h)<\varphi(x_0),
 	  \varphi(x_0+h)<\varphi(x_0)$. Damit folgt:
@@ -3333,7 +3341,7 @@ Genauigkeit auf sechs Stellen erhält man mit Sicherheit für $n\geq 10^6$
 (schlechte Konvergenz), da  $|R_n(1)|\leq \frac{1}{n+1}\leq \frac{1}{n}\leq 10^{-6}
 \Rightarrow n\geq 10^6$.
 
-Setzt man $y=2$ in Gleichung \ref{eq:y2} ein, erhält man $\ln 2=2\sum_{k=1}^n 
+Setzt man $y=2$ in \autoref{eq:y2} ein, erhält man $\ln 2=2\sum_{k=1}^n 
 \frac{1}{2k-1}\left( \frac{1}{3} \right)^{2k-1}+\widetilde{R_n}(2)$:
 \[|\widetilde{R_n}(2)|=\left|\frac{\Theta_1}{2n+1}+\frac{3}{2}\Theta_2\right|
 \left( \frac{3}{2} \right)^{2n+1}\leq\left( \frac{1}{2n+1}+\frac{3}{2} \right)
@@ -3512,7 +3520,7 @@ Zur Untersuchung dieses Problems braucht man diverse Variablen:
 \end{definition}
 
 \begin{remark}
-  Nach Lemma \ref{lemma:int} Punkt (iv) gilt immer
+  Nach \autoref{lemma:int} Punkt (iv) gilt immer
   $\int_{\underline{a}}^b fdx\leq \int_a^{\overline{b}}fdx$. Es gibt
   beschränkte Funktionen für die $\int_{\underline{a}}^b fdx<
   \int_a^{\overline{b}}fdx$.
