• vogel-dml2/dml2.latex   · Die SVN‐Schlüsselwörter waren für die Datei gar nicht aktiviert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@771 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-dml2/dml2.latex
+++ b/vogel-dml2/dml2.latex
@@ -105,8 +105,8 @@
 
 \renewcommand*{\tilde}[1]{\widetilde{#1}}
 
-\SVN $LastChangedRevision: 14 $
-\SVN $LastChangedDate: 2006-05-08 09:41:28 +0200 (Mo, 08 Mai 2006) $
+\SVN $LastChangedRevision$
+\SVN $LastChangedDate$
 
 \makeindex
 
