- Gleichung umgestellt - ldots entfernt - 3 ausgeschrieben - Minus muss ein = sein - exists ausgeschrieben wegen Platz - Klammern fuer bessere Lesbarkeit - 2/pi war pi/2 - Formel umbrochen w/ Rand - fig fuer Spiegelung an der Kugel wird nicht mehr gebraucht - Verweis auf Gleichung berichtigt
git-svn-id: https://svn.lug-jena.de/uni-skripte@777 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -2396,8 +2396,8 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
       \Rightarrow -\int_{\partial K_{\epsilon}(y)}
          u(x)\frac{\partial\Gamma}{\partial\vec{n}(x)}(x,y)\,dS(x) =
          \frac{1}{\abs{\omega_{n}}\epsilon^{n-1}} \int_{\partial
-         K_{\epsilon}(y)} u(x)\,dS(x)
-         = \frac{1}{\abs{\partial K_{\epsilon}(y)}} \int_{\partial
+         K_{\epsilon}(y)} u(x)\,dS(x)\\
+      \qquad= \frac{1}{\abs{\partial K_{\epsilon}(y)}} \int_{\partial
          K_{\epsilon}(y)} u(x)\,dS(x) \xrightarrow{\epsilon\rightarrow0}
          u(y)\\
       \intertext{denn}
@@ -2482,7 +2482,6 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
     \rput[B](1.5,1.2){$y$}
     \rput[B](2.5,2){$\overline{y}=\frac{1}{y}$}
   \end{pspicture}
-%  \ifpdf\input{Spiegelung-Kugel.pdf_t}\else\input{Spiegelung-Kugel.eps_t}\fi
   \caption{\label{fig:3}Spiegelung an Einheitskugel}
 \end{figure}
 
@@ -2525,10 +2524,10 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
   Sei $u$ eine zweimal stetig fortsetzbare Funktion auf dem
   Rand der Einheitskugel ($u\in C^{2}(\overline{K})$) und harmonisch auf
   $K$. Dann gilt:
-  \begin{gather*}
+  \begin{gather}\label{eq:913-3}
     u(y) = \frac{1-\abs{y}^{2}}{\abs{\omega_{n}}} \int_{\partial K}
        \frac{u(x)}{\abs{x-y}^{n}}dS(x)\qquad y\in K
-  \end{gather*}
+  \end{gather}
 
   \begin{proof}
     Sei $G$ Green'sche Funktion für $K\Rightarrow$ es gilt \autoref{eq:18}
@@ -2582,7 +2581,7 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
 
   \begin{proof}
     \begin{enumerate}
-    \item $\phi(x)$ in \autoref{eq:18} statt $u(x)$ Laplace-Operator unter das
+    \item $\phi(x)$ in \autoref{eq:913-3} statt $u(x)$ Laplace-Operator unter das
     Integral, für $\phi(x)$ ohne Wirkung, da Laplace nach $y$, Anwendung
     auf $G$, geht weil $G$ harmonisch $\Rightarrow$ alles harmonisch
     $\rightarrow$ Weltfrieden :)
@@ -2602,9 +2601,11 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
       \begin{align*}
         1 &= \int_{\partial K} \frac{1-\lvert
           y\rvert^2}{\lvert\omega_n \rvert \lvert x-y\rvert^n} dS(x)\\
-        &\Rightarrow \phi(y^0)-1 = \int_{\partial K} \frac{(1- \lvert
-          y\rvert^2) \phi(y^0)}{\lvert\omega_n\rvert \lvert
-          x-y\rvert^n} dS(x)\\
+%Ich verstehe den Sinn dieser Zeile nicht. IMHO wird das fuer den
+%Beweis nicht benötigt
+%        &\Rightarrow \phi(y^0)-1 = \int_{\partial K} \frac{(1- \lvert
+%          y\rvert^2) \phi(y^0)}{\lvert\omega_n\rvert \lvert
+%          x-y\rvert^n} dS(x)\\
         &\Rightarrow \lvert u(y)-\phi(y^0)\rvert = \Bigg\lvert
         \int_{\partial K} \phi(x)-\phi(y^0) \frac{1-\lvert y\rvert^2}{
         \lvert\omega_n\rvert \lvert x-y\rvert^n} dS(x)\Bigg\rvert
@@ -2698,7 +2699,7 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
   Sei $\Omega\subset\R^n$ offen, $u\in C^2(\Omega)$ mit $\Delta u\geq
   0$ auf $\Omega$.\footnote{Dieser Satz gilt gleichermaßen für die
     Beziehung $\leq$ und $=$.} Dann gilt für jede Kugel $K_R(y)$ mit
-  $\overline{K_R(y)} <\Omega$:
+  $\overline{K_R(y)} \subseteq\Omega$:
   \begin{enumerate}
   \item \emph{sphärische Mittelwerteigenschaft}:
     \[u(y)\leq \frac{1}{\lvert \partial K_R \rvert} \int_{\partial
@@ -3164,12 +3165,12 @@ Differentialgleichung}:
          \frac{1}{2t}\Big)\\
       \intertext{Damit ergibt sich für den Laplace-Operator}
       \Delta\Big( t^{-\frac{n}{2}} e^{-\frac{\abs{x}^{2}}{4t}}\Big) &=
-         \sum_{j=1}^{n} t^{-\frac{n}{2}} e^{-\frac{\abs{x}^{2}}{4t}}
-	 \frac{\partial^{2}}{\partial x_{j}^{2}} = 
+         \sum_{j=1}^{n}\frac{\partial^{2}}{\partial x_{j}^{2}}
+	 t^{-\frac{n}{2}} e^{-\frac{\abs{x}^{2}}{4t}} = 
          t^{-\frac{n}{2}} e^{-\frac{\abs{x}^{2}}{4t}}
          \Big(\frac{\abs{x}^{2}}{4t^{2}} - \frac{n}{2t}\Big)
     \end{align*}
-    $\Rightarrow (\ldots)_{t} = \Delta(\ldots)$
+    $\Rightarrow \Phi_{t} = \Delta(\Phi)$
 
     Es ist
     \begin{align*}
@@ -3288,7 +3289,7 @@ Differentialgleichung}:
 
 \begin{bemerk}
   Die Lösung von \autoref{eq:wlg} ist i.\,A. nicht
-  eindeutig. Beispielsweise ist $u(x,t)=\sum \frac{g^{n}(t)}{(2n)!}
+  eindeutig. Beispielsweise gilt für die Gleichung $u(x,t)=\sum \frac{g^{n}(t)}{(2n)!}
   x^{2n}$ mit $g(t)=\begin{cases}e^{-\frac{1}{t^{k}}}&t>0\\
 		      0&t=0\end{cases}$ mit $k>1$ für alle $x$:
   \begin{align*}
@@ -3630,7 +3631,7 @@ Gesucht ist $u(x,t)$.
 
 % 3.1.2006
 
-\subsection{Die 3-dimensionale Wellengleichung} % 9.2.3
+\subsection{Die dreidimensionale Wellengleichung} % 9.2.3
 
 Cauchy-Problem:
 \begin{align*}
@@ -3660,7 +3661,7 @@ ohne Beweis: Das Cauchy-Problem hat höchstens eine Lösung!
        \int_{\abs{x-y}=t} u_{0}(y)\,dS(y) \Big)
   \end{gather*}
   (\textit{Anm.: mit $\abs{x-y}=t$ wird über den Rand der Kugel $K_{t}(x)$ integriert.})
-  Die (eindeutig bestimmte) Lösung des Cauchy-Problems $u_{tt}-\Delta u =
+  die (eindeutig bestimmte) Lösung des Cauchy-Problems $u_{tt}-\Delta u =
   0$ mit den Anfangsbedingungen $u(x,0)=u_{0}(x)$ und $u_{t}(x,0) =
   u_{1}(x)$ ($x\in \R^{3}, t>0$).
 
@@ -3917,14 +3918,15 @@ Die Idee ist, eine "`Abstiegsmethode"', die so genannte \emph{Hadamardsche
 Abstiegsmethode}\footnote{benannt nach dem französischen Mathematiker
 Jacques Salomon Hadamard (1865--1963)}, für homogene Gleichungen anzuwenden.
 
-Es ist $x=(x_{1},x_{2})$ Lösung des Cauchyproblems $u_{tt}-\Delta u=0$
-mit $u(x,0)=0, u_{t}(x,0)=u_{1}(x)$. Wir setzen:
+Es sei $x=(x_{1},x_{2})$. Weiter ist $u(x,t)$ Lösung des
+Cauchyproblems $u_{tt}-\Delta u=0$ mit $u(x,0)=0,
+u_{t}(x,0)=u_{1}(x)$. Wir setzen:
 \begin{align*}
   v(x,x_{3},t) &\colon= u(x,t) & \forall (x,x_{3})\in\R^{3}, t>0\\
   v_{0}(x,x_{3}) &\colon= u_{0}(x) & \forall (x,x_{3})\in\R^{3}\\
   v_{1}(x,x_{3}) &\colon= u_{1}(x) & \forall (x,x_{3})\in\R^{3}\\
   \Rightarrow v_{tt}-\Delta v &= u_{tt}(x,t)-\Delta u(x,t)=0\\
-  v(x,x_{3},0) &= u_{0}(x)-v_{0}(x,x_{3})\\
+  v(x,x_{3},0) &= u_{0}(x)=v_{0}(x,x_{3})\\
   v_{t}(x,x_{3},0) &= u_{1}(x)=v_{1}(x,x_{3})
 \end{align*}
 Aus \autoref{satz:923-1} folgt:
@@ -3940,7 +3942,7 @@ Es gilt:
      \frac{1}{2\pi t} \int_{\abs{y-\overline{x}}\leq t}
      \frac{u_{1}(y)}{\sqrt{t^{2} - \abs{y-x}^{2}}}\,dy
 \end{gather*}
-Hieraus ergibt sich der \ldots 
+Hieraus ergibt sich der folgende:
 
 \begin{satz}\label{satz:924-1}
   Es sei $u_{0}\in C^{3}(\R^{2}), u_{1}\in C^{2}(\R^{2})$. Dann ist
@@ -4008,9 +4010,10 @@ Man finde alle Lösungen der Form $u(x,t) = X(x)T(t)$ von \autoref{enu:1}
 und \autoref{enu:2}!
 \begin{gather*}
   u_{tt} - c^{2} u_{xx} = XT'' - c^{2}X''T = 0 \Leftrightarrow c^{2} X''T
-     =XT'' \Leftarrow \frac{X''}{T} = \frac{T''}{c^{2}T} = \lambda
-     \exists \lambda\in\R (\forall x \forall t)
+     =XT'' \Leftarrow \frac{X''}{X} = \frac{T''}{c^{2}T} = \lambda
 \end{gather*}
+
+Solch ein $\lambda\in\R$ existiert für alle $x$ und $t$.
 
 Die obigen Gleichungen sind zwei gewöhnliche Differentialgleichungen.
 Wir lösen die linke und die rechte Seite separat. In beiden Fällen
@@ -4024,12 +4027,12 @@ Randwertproblem (1).
 % Sollte vielleicht besser ein \paragraph sein
 \minisec{Lösen des Randwertproblems (1)}
 
-Ansatz: $X=e^{\mu x}$ $\Rightarrow$ charakteristisches Polynom:
+Ansatz: $X=e^{\mu x}\Rightarrow$ charakteristisches Polynom:
 $\mu^{2}=\lambda$
 \begin{faelle}
  \item Für $\lambda>0$ ergibt sich $\mu_{1/2} = \pm\sqrt{\lambda}$. Die
   allgemeine Lösung lautet also $X(x)= c_{1}e^{\sqrt{\lambda}x} +
-  c_{2}e^{-\sqrt{\lambda}x}$. Die Randbedingung \autoref{enu:2}
+  c_{2}e^{-\sqrt{\lambda}x}$. Die Randbedingung (\autoref{enu:2})
   $X(0) = X(l) = 0$ liefert $c_{1}+c_{2}=0$ und
   $c_{1}e^{\sqrt{\lambda}l} + c_{2}e^{-\sqrt{\lambda}l} =0$. Da $c\geq 0$
   (nach Definition), kann nur gelten $c_{1}=c_{2}=0$.
@@ -4038,16 +4041,16 @@ $\mu^{2}=\lambda$
   Spannung der Saite Null ist.
  \item Für $\lambda=0$ ergibt sich analog $c_{1}=c_{2}=0$.
 
- \item $\lambda<0$ $\Rightarrow$ $\mu_{1/2}=\pm i\sqrt{-\lambda}$
-  $\Rightarrow$ allgemeine Lösung: $X=c_{1} \cos\sqrt{-\lambda} x +
-  c_{2}\sin\sqrt{-\lambda}x$ $(c_{1},c_{2}\in\R)$
+ \item $\lambda<0\Rightarrow\mu_{1/2}=\pm i\sqrt{-\lambda}
+  \Rightarrow$ allgemeine Lösung: $X=c_{1} \cos(\sqrt{-\lambda} x) +
+  c_{2}\sin(\sqrt{-\lambda}x)$ für $(c_{1},c_{2}\in\R)$
 
   $X(0) = 0 \Leftrightarrow c_{1}=0$ und $X(l) = 0 \Leftrightarrow
-  c_{2}\sin\sqrt{-\lambda} l =0 \Leftrightarrow
+  c_{2}\sin(\sqrt{-\lambda} l) =0 \Leftrightarrow
   c_{2}=0$\footnote{Allerdings soll $c_{1}\neq c_{2}$ sein. Ansonsten
   hätten alle Fälle nur triviale Lösungen. Wir suchen aber andere
   Lösungen.} oder $\sqrt{-\lambda}l = k\pi$ bzw. $\lambda =
-  -\big(\frac{k\pi}{l}\big)^{2}$ $(k\in\N)$
+  -\big(\frac{k\pi}{l}\big)^{2}$ für $(k\in\N)$
 \end{faelle}
 
 $\Rightarrow$ Lösung für $\lambda_{k}=-\big(\frac{k\pi}{l}\big)^{2}$
@@ -4058,7 +4061,7 @@ $(k\in\N)$, $X_{k}(x) = c_{k}\sin\frac{k\pi}{l} x$ $(c_{k}\in\R)$
   $\lambda=\lambda_{k}$}
 
 \begin{gather*}
-  T_{k}'' + c^{2} \big(\frac{k\pi}{l}\big)^{2} T_{k}=0
+  T_{k}'' + c^{2} \Big(\frac{k\pi}{l}\Big)^{2} T_{k}=0
 \end{gather*}
 Ansatz: $T_{k}= e^{\rho t}$ $\Rightarrow$ $\rho^{2} +
 \big(\frac{ck\pi}{l}\big)^{2} = 0, \rho_{1/2} = \pm i
@@ -4092,14 +4095,14 @@ Man finde $a_{k},b_{k}\in\R$, so dass
   u(x,t) := \sum_{k=1}^{\infty} (a_{k}\cos\frac{ck\pi}{l} t + b_{k}\sin
      \frac{ck\pi}{l} t) \sin \frac{k\pi}{l} x
 \end{gather*}
-die Anfangsbedingung \autoref{enu:3} erfüllt!
+die Anfangsbedingung (\autoref{enu:3}) erfüllt!
 
 d.\,h.
 \begin{align}
   u(x,0) &= \sum_{k=1}^{\infty} a_{k} \sin\frac{k\pi}{l} x = u_{0}(x)
      \label{eq:30}\\
   u_{t}(x,0) &= \sum_{k=1}^{\infty} \underbrace{\frac{ck\pi}{l}
-     b_{k}}_{=:\tilde{b_{k}}} \sin\frac{k\pi}{l} x = u_{1}(x) \label{eq:31}
+     b_{k}}_{=:\tilde{b}_{k}} \sin\frac{k\pi}{l} x = u_{1}(x) \label{eq:31}
 \end{align}
 Beim Ableiten von $u$ nach $t$ haben wir den Konvergenzradius der Reihe
 ignoriert (nicht betrachtet oder halt \obda machbar)
@@ -4361,7 +4364,7 @@ Da jedes Folgenglied stetig ist, ist auch $f$ stetig und jedes Folgeglied
 periodisch ($f(-l)=f(l)$). Somit muss auch die Funktion periodisch sein: $f\in
 C_{\text{periodisch}}([-l,l])$.
 
-Umgekehrung gilt nicht! $\exists f\in C_{perio}([-l,l])$ mit
+Umgekehrung gilt nicht! $\exists f\in C_{\text{periodisch}}([-l,l])$ mit
 $(S_{n}f(x_{0}))_{n}$ divergent.
 
 Mithilfe weiterer Bedingungen an die Funktion $f$ kann man sichern, dass
@@ -4414,13 +4417,13 @@ dass sich $f$ als reine \emph{Sinus-Reihe} darstellen lässt.
 
   \begin{align*}
     \Rightarrow
-       b_{k} &= \frac{2}{\pi} \int_{0}^{\pi} f(x)\sin kx\,x = \frac{2}{\pi}
+       b_{k} &= \frac{2}{\pi} \int_{0}^{\pi} f(x)\sin kx\,dx = \frac{2}{\pi}
        \Big( \int_{0}^{\frac{\pi}{2}} x \sin kx\,dx +
        \int_{\frac{\pi}{2}}^{\pi} (\pi-x\sin kx)\,dx\Big)\\
-    &= \frac{2}{\pi} \Big[ -x \frac{\cos kx}{k} \Big]_{0}^{\frac{\pi}{2}}
-       + \int_{0}^{\frac{\pi}{2}} \frac{1}{k} \cos kx\,dx + \frac{2}{\pi}
-       \Big[-(\pi-x) \frac{\cos kx}{k} \Big]_{\frac{2}{\pi}}^{\pi} -
-       \frac{1}{k} \int_{\frac{2}{\pi}}^{\pi} \cos kx\,dx\\
+    &= \frac{2}{\pi} \bigg(\Big[ -x \frac{\cos kx}{k} \Big]_{0}^{\frac{\pi}{2}}
+       + \int_{0}^{\frac{\pi}{2}} \frac{1}{k} \cos kx\,dx +
+       \Big[-(\pi-x) \frac{\cos kx}{k} \Big]_{\frac{\pi}{2}}^{\pi} -
+       \frac{1}{k} \int_{\frac{2}{\pi}}^{\pi} \cos kx\,dx\bigg)\\
     &= \frac{2}{\pi} \frac{2}{k^{2}} \sin \frac{k\pi}{2} = \frac{4}{\pi
        k^{2}} \begin{cases}0& k\text{ gerade}\\ (-1)^{l}& k\text{
                 ungerade} \end{cases}
@@ -4433,13 +4436,13 @@ dass sich $f$ als reine \emph{Sinus-Reihe} darstellen lässt.
   \end{gather*}
 
   für $x=\frac{\pi}{2}\Rightarrow$
-  \begin{align*}
-    \frac{\pi}{2} &= \frac{4}{\pi} \sum_{l=0}^{\infty}
+  \begin{gather*}
+    \frac{\pi}{2} = \frac{4}{\pi} \sum_{l=0}^{\infty}
        \frac{(-1)^{l}}{(2l+1)^{2}}
-       \underbrace{\sin(l\pi+\nicefrac{\pi}{2})}_{(-1)^{l}}\\
-    &\Leftrightarrow\frac{\pi^{2}}{8} = \sum_{l=0}^{\infty}
+       \underbrace{\sin(l\pi+\nicefrac{\pi}{2})}_{(-1)^{l}}
+    \Leftrightarrow\frac{\pi^{2}}{8} = \sum_{l=0}^{\infty}
        \frac{1}{(2l+1)^{2}}
-  \end{align*}
+  \end{gather*}
 \end{bsp}
 
 % 17.01.06
@@ -4459,9 +4462,9 @@ dass sich $f$ als reine \emph{Sinus-Reihe} darstellen lässt.
 
 \begin{bemerk}
   Der Raum $R([-l,l])$ aus dem letzten Abschnitt ist nicht vollständig
-  bzgl. $\norm{f} = \big(\int_{-l}^{-l} \abs{f(x)}^{2}\,dx
+  bzgl. $\norm{f} = \big(\int_{-l}^{l} \abs{f(x)}^{2}\,dx
   \big)^{\frac{1}{2}}$. Wir können aber zu dem vollständigen Raum
-  $L_{2}([-l,l]) := \{ f\colon \int_{-l}^{-l} \abs{f(x)}^{2}\,dx <\infty\}
+  $L_{2}([-l,l]) := \{ f\colon \int_{-l}^{l} \abs{f(x)}^{2}\,dx <\infty\}
   \supset R([-l,l])$ übergehen. Das Integral im $L_{2}$ ist das
   Lebesgue-Integral.
 \end{bemerk}
