• skript.latex   · Einige Fehler korrigiert, die Daniel Adam im Januar gemeldet hat. Ich     konnte nicht alles Stellen lokalisieren bzw. sind einige Fehler bereits im     Skript behoben, aber wir können ja nicht das PS neu bauen.
git-svn-id: https://svn.lug-jena.de/uni-skripte@778 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hempel-info4/skript.latex
+++ b/hempel-info4/skript.latex
@@ -495,7 +495,7 @@ Beispiel: $\{a^i b^i : i,j\ge 1\}\in \REG$
 \begin{bemerk}\label{bem:1.3.3}
 	später zeigen: $\REG \subsetneqq \CF \subsetneqq \CS \subsetneqq \L_0$
 \end{bemerk}
-Problem: $\{\varepsilon\}\notin \CS$, da jede erzeugende Grammatik verkürzend
+Problem: $\{\varepsilon\}\notin \CS$, da jede erzeugende Grammatik nicht verkürzend
 ist ($|S|=1$, $|\varepsilon|=0$)\\
 Lösung: Vereinbarung bzgl. $\varepsilon$:
 \begin{enumerate}
@@ -536,7 +536,7 @@ Lösung: Vereinbarung bzgl. $\varepsilon$:
 	\item Automatenmodell
 	\item Beispiele: $`\left\{ w\in \{a,b\}^{*} : w \mathrm{ beginnt mit } a
 		\right\}$
-	\item $\{a^i b^i : i\in [1,\infty)\}$
+	\item $\{a^i b^i \colon i\in [1,\infty)\}\notin\REG$
 	\item alle endlichen Sprachen
 \end{itemize}
 
@@ -551,7 +551,8 @@ Automat - akzeptiert bzw. entscheidet eine Sprache
 		\item $\Sigma$ ist endliche Menge (Eingabealphabet)
 		\item $Z$ ist endliche Menge (Zustandsmenge)
 		\item $z_0 \in Z$
-		\item $\delta : \Sigma\times Z\mapsto Z$ (Überführungsfunktion)
+		\item $\delta : \Sigma\times Z\mapsto Z$ (total
+		definierte Überführungsfunktion)
 		\item $Z_E \subseteq Z$ (Endzustandsmenge)
 	\end{enumerate}
 \end{defini}
@@ -1949,6 +1950,13 @@ $\CF\subseteq \CS$ bekannt, aber $\{ a^n b^n c^n : n\in \N\} \in
 \end{satz}
 \begin{bemerk}\label{bem:4.2.5}
 Können deterministische LBAs genausoviel wie nichtdeterministische LBAs?
+
+  Ja, ähnlich wie bei NFA und DFA kann man die Zustandsmenge des
+  deterministischen LBA mit einer Potenzmengenkonstruktion erweitern und die
+  Regelmenge entsprechend anpassen. (in allen Beispielen werden nur
+  Überführungen von $(Z\times\Sigma)\rightarrow(\Sigma \times Z \times
+  \{L,R,0\})$ verwendet, die Definition lässt aber $(Z\times\Sigma)
+  \rightarrow \mathfrak{P}(\Sigma\times Z \times \{L,R,0\})$ zu.
 \end{bemerk}
 
 \section{$\L_0$-Sprachen}
@@ -2003,6 +2011,8 @@ zahlentheoretischer Funktionen
 	\tilde{\F_2} &= \N^{\N\times\N} & \F_2 &= \{f\ |\ f: \N\times\N \ra \N\}\\
 	\tilde{\F} &= \bigcup_{i\in\N}\tilde{\F_i} & \F &= \bigcup_{i\in\N}\F_i
 \end{align*}
+$\tilde{F}$ ist also die Menge aller beliebigstelligen, totalen Funktionen und
+$F$ die Menge aller beliebigstelligen, partiellen Funktionen.
 
 \section{Turing-Berechenbarkeit}
 \begin{defini}\label{def:5.3.1}
