• skript.latex   · Die Vorlage an die Forderung, nag mit \RequirePackage zu laden, angepasst.
git-svn-id: https://svn.lug-jena.de/uni-skripte@781 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vorlage/skript.latex
+++ b/vorlage/skript.latex
@@ -13,11 +13,12 @@
 % von einer halben Zeile (halfparskip) und dafür keinen Absatzeinzug,
 % wobei die letzte Zeile eines Absatzes zu min. 1/4 leer ist.
 
-\documentclass[halfparskip*,german,draft,twoside]{scrreprt}
-
-\usepackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
+
+\documentclass[halfparskip*,german,draft,twoside]{scrreprt}
+
 \usepackage{ifthen}
 \usepackage{makeidx}
 % \usepackage[final]{graphicx}  % Für Grafiken
